--- a/instructor/package.json
+++ b/instructor/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-browser-dynamic": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ngrx/operators": "^20.0.0",
     "@ngrx/signals": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
